[package]
name = "rust_os"
version = "0.1.0"
authors = ["Your Name youremail@website.domain"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={},index=0"]
run-args = [#"-curses", # uncomment for text-mode
           "-drive", "format=raw,file=disk.bin,index=1,media=disk"]
test-args = [
        "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
